--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
 		"zod": "^3.25.67"
 	},
 	"devDependencies": {
+		"@types/node": "^24.0.3",
 		"marked": "^15.0.12",
 		"typescript": "^5.8.3",
 		"workers-mcp": "^0.0.13",
-		"wrangler": "^4.20.1"
+		"wrangler": "^4.20.3"
 	}
 }
