--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,11 @@
 		"allowSyntheticDefaultImports": true,
 		"forceConsistentCasingInFileNames": true,
 		"strict": true,
-		"skipLibCheck": true
+		"skipLibCheck": true,
+		"types": [
+			"./worker-configuration.d.ts",
+			"node"
+		]
 	},
 	"include": ["worker-configuration.d.ts", "src/**/*.ts"]
 }
