--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,23 +6,14 @@ compatibility_flags = ["nodejs_compat"]
 # Environment variables
 [vars]
 BASE_URL = "https://iot-api.acceleronix.io"
-# ACCESS_KEY and ACCESS_SECRET should be configured as environment variables in Cloudflare Workers dashboard
-# Do not put sensitive credentials in this file
-
-# KV Namespaces
-[[kv_namespaces]]
-binding = "OAUTH_KV"
-id = "9b80005b78a241c9a4f16de3989abce5"
+# ACCESS_KEY and ACCESS_SECRET should be configured as secrets via:
+# npx wrangler secret put ACCESS_KEY
+# npx wrangler secret put ACCESS_SECRET
 
 # Durable Objects
 [[durable_objects.bindings]]
 name = "MCP_OBJECT"
 class_name = "IoTMCP"
-
-# Assets
-[assets]
-directory = "./static/"
-binding = "ASSETS"
 
 # Observability
 [observability]
